--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-pug",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Vite plugin for transform Pug templates into HTML",
   "main": "dist/index.js",
   "files": [
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "dev": "tsc -w -p .",
-    "build": "rm -rf dist && tsc -p .",
+    "build": "rm -rf dist && tsc -p . && cp src/hot.js dist",
     "test": "jest"
   },
   "repository": {
@@ -27,16 +27,17 @@
     "url": "https://github.com/SubZtep/vite-plugin-pug/issues"
   },
   "homepage": "https://github.com/SubZtep/vite-plugin-pug#readme",
+  "dependencies": {
+    "pug": "^3.0.2"
+  },
   "peerDependencies": {
     "vite": "~2.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.21",
     "@types/pug": "^2.0.4",
     "jest": "^26.6.3",
-    "ts-jest": "^26.5.1",
-    "typescript": "^4.1.5"
-  },
-  "dependencies": {
-    "pug": "^3.0.0"
+    "ts-jest": "^26.5.4",
+    "typescript": "^4.2.3"
   }
 }
