--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dist"
   ],
   "scripts": {
-    "dev": "tsc -w -p .",
-    "build": "rm -rf dist && tsc -p . && cp src/hot.js dist",
+    "dev": "tsc -w",
+    "build": "node scripts/build.js",
+    "esbuild": "esbuild src/index.ts --loader:./hot.js=text",
+    "wipe": "bash scripts/wipe.sh",
     "test": "jest"
   },
   "repository": {
@@ -30,14 +32,15 @@
   "dependencies": {
     "pug": "^3.0.2"
   },
-  "peerDependencies": {
-    "vite": "~2.0.0"
-  },
   "devDependencies": {
     "@types/jest": "^26.0.21",
+    "@types/node": "^14.14.35",
     "@types/pug": "^2.0.4",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
+  },
+  "peerDependencies": {
+    "vite": "~2"
   }
 }
