X-Tree Diff+ initial snippets :neckbeard:

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "ts-node": {
+    "transpileOnly": true
+  },
   "compilerOptions": {
     "module": "CommonJS",
     "target": "ESNext",
@@ -9,18 +12,16 @@
     "sourceMap": false,
     "outDir": "dist",
     "strict": true,
+    "noImplicitAny": false,
     "removeComments": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
+    // "isolatedModules": true,
     "baseUrl": ".",
-    "types": ["vite/client"],
-    "typeRoots": [
-      "./src/types",
-      "node_modules/@types"
-    ],
+    // "types": ["vite/client"],
+    "typeRoots": ["types", "node_modules/@types"]
   },
-  "include": ["src", "__test__"],
+  "include": ["src", "types"],
   "exclude": ["node_modules", "dist"]
 }
