--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "dev": "tsc -w",
+    "forest": "ts-node scripts/forest.ts",
     "build": "node scripts/build.js",
     "esbuild": "esbuild src/index.ts --loader:./hot.js=text",
     "wipe": "bash scripts/wipe.sh",
@@ -30,7 +31,10 @@
   },
   "homepage": "https://github.com/SubZtep/vite-plugin-pug#readme",
   "dependencies": {
-    "pug": "^3.0.2"
+    "@dovyih/x-tree-diff-plus": "^0.1.4",
+    "pug": "^3.0.2",
+    "pug-lexer": "^5.0.1",
+    "pug-parser": "^6.0.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.21",
@@ -38,6 +42,7 @@
     "@types/pug": "^2.0.4",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.4",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "peerDependencies": {
