--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "rootDir": ".",
-    "types": ["vite/client"],
+    "types": ["vite/client", "jest"],
     "typeRoots": ["types", "node_modules/@types"]
   },
   "include": ["src", "types", "scripts"],
