--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
   "scripts": {
     "dev": "npm run build -- --watch",
     "typecheck": "tsc --noEmit",
-    "forest": "node --loader ts-node/esm.mjs scripts/forest.ts",
-    "build": "tsup src/index.ts --dts --format cjs,esm",
+    "forest": "tsup --watch ./scripts/forest.ts --onSuccess \"node ./dist/forest.cjs\"",
+    "build": "tsup src/index.ts --dts --format cjs,esm & tsup src/hot.client.ts --format esm",
     "wipe": "bash scripts/wipe.sh",
     "test": "cross-env NODE_OPTIONS=--experimental-json-modules npx jest"
   },
@@ -41,7 +42,6 @@
     "@types/pug": "^2.0.4",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.4",
-    "ts-node": "^9.1.1",
     "tsup": "^4.8.21",
     "typescript": "^4.2.3",
     "vite": "^2.1.3"
