--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,4 @@
 {
-  "ts-node": {
-    "transpileOnly": true
-  },
   "compilerOptions": {
     "module": "ESNext",
     "target": "ESNext",
@@ -18,8 +15,10 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "rootDir": ".",
-    "types": ["vite/client", "jest"],
-    "typeRoots": ["types", "node_modules/@types"]
+    "esModuleInterop": true,
+    "downlevelIteration": true,
+    "types": ["vite/client", "jest", "pug"],
+    "typeRoots": ["./types", "node_modules/@types"]
   },
   "include": ["src", "types", "scripts"],
   "exclude": ["node_modules", "dist"]
