--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2019",
     "module": "CommonJS",
-    "lib": ["ESNext"],
+    "lib": ["ES2019"],
     "moduleResolution": "Node",
     "declaration": true,
     "declarationMap": false,
