--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Vite plugin for transform Pug templates into HTML",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
     "dev": "npm run build -- --watch",
-    "build": "tsup src/index.ts --dts --format cjs,esm",
+    "build": "tsup src/index.ts --dts --format cjs,esm --no-splitting",
+    "postinstall": "npx mkdirp dist && cp src/*.d.ts dist || copy src/*.d.ts dist",
     "typecheck": "tsc --noEmit",
     "test": "jest"
   },
