--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-pug",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Vite plugin for transform Pug templates into HTML",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -34,15 +34,16 @@
     "pug": "^3.0.2"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^27.4.1",
     "@types/pug": "^2.0.6",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.3",
     "tsup": "^5.11.13",
-    "typescript": "^4.5.5",
+    "typescript": "^4.6.2",
     "vite": "^2.8.3"
   },
   "peerDependencies": {
-    "vite": "~2"
+    "vite": "~2",
+    "picocolors": "~1"
   }
 }
