--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "homepage": "https://github.com/SubZtep/vite-plugin-pug#readme",
   "dependencies": {
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "picocolors": "~1"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
@@ -41,9 +42,5 @@
     "tsup": "^5.11.13",
     "typescript": "^4.6.2",
     "vite": "^2.8.3"
-  },
-  "peerDependencies": {
-    "vite": "~2",
-    "picocolors": "~1"
   }
 }
