--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "vite-plugin-pug",
   "version": "0.3.1",
   "description": "Vite plugin for transform Pug templates into HTML",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
-    "dev": "npm run build -- --watch",
-    "build": "tsup src/index.ts --dts --format cjs,esm",
-    "typecheck": "tsc --noEmit",
-    "test": "jest"
+    "dev": "node scripts/build.js --watch",
+    "build": "rm -rf dist && node scripts/build.js && tsc",
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
@@ -34,16 +38,10 @@
     "pug": "^3.0.2"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
     "@types/pug": "^2.0.6",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.3",
-    "tsup": "^5.11.13",
-    "typescript": "^4.6.2",
-    "vite": "^2.8.3"
-  },
-  "peerDependencies": {
-    "vite": "~2",
-    "picocolors": "~1"
+    "esbuild": "^0.14.48",
+    "typescript": "^4.7.4",
+    "vite": "^2.9.13",
+    "vitest": "^0.16.0"
   }
 }
