--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
   "compilerOptions": {
-    "target": "ES2019",
-    "module": "CommonJS",
-    "lib": ["ES2019"],
+    "baseUrl": ".",
+    "rootDir": "src",
+    "outDir": "dist",
+    "target": "ESNext",
+    "module": "ESNext",
+    // "lib": ["ESNext"],
     "moduleResolution": "Node",
     "declaration": true,
-    "declarationMap": false,
-    "sourceMap": false,
-    "outDir": "dist",
-    "strict": true,
-    "removeComments": true,
+    "emitDeclarationOnly": true,
     "esModuleInterop": true,
+    "isolatedModules": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "strict": true,
+    "importsNotUsedAsValues": "error"
   },
   "include": ["src"]
 }
